# fp-agent

./: .gitignore  README.md  dune-project  fp_agent.opam
_build/: .db  .digest-db  trace.csexp  trace.csexp.old
_build/default/: fp_agent.dune-package  fp_agent.install  fp_agent.opam
docs/: plugins.md  tui-product-notes.md
lib/: agent_loop.ml  agent_loop.mli  agent_state.mli  config.ml  config.mli  dune  event.ml  event.mli  journal.ml  message.ml  model_action.ml  model_action.mli  model_client.ml  permission.mli  policy.ml  policy.mli  provider.ml  provider.mli  session.ml  session.mli  session_state.mli  shell.ml  tool_call.ml  tool_call.mli  tool_result.ml  tool_result.mli  tool_runner.ml  tool_runner.mli  transcript.ml  transcript.mli  view.ml  workspace.ml  workspace.mli
lib/agent/: agent_loop.ml  agent_loop.mli  builtin_tools.ml  config.ml  config.mli  graph_runtime.ml  graph_runtime.mli  model_client.ml  model_client.mli  plugin.ml  plugin.mli  policy.ml  policy.mli  project_instructions.ml  project_instructions.mli  provider.ml  provider.mli  session_state.ml  session_state.mli  tool.ml  tool.mli  tool_loader.ml  tool_loader.mli  tool_runner.ml  tool_runner.mli  transcript.ml  transcript.mli
lib/core/: agent_state.ml  event.ml  event.mli  graph_event.ml  graph_event.mli  llm.ml  llm.mli  message.mli  model_action.ml  model_action.mli  permission.ml  tool_call.ml  tool_call.mli  tool_result.mli
lib/io/: event_log.ml  event_log.mli  git_snapshot.ml  journal.mli  (+4 more)
tasks/: prd-ocaml-code-agent-harness.md
test/: dune  test_scaffold.ml  test_tool_call.ml
(+65 files in other folders)
